<resources>
    <string name="app_name">Superapp Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="username">xxxxxxxxxx</string>
    <string name="password">Password</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="company_name">Company Name</string>
    <string name="log_in">Login</string>
    <string name="re_password">Re-Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="contact_no">Contact No.</string>
    <string name="user_id">User ID</string>
    <string name="not_a_member_sign_in">Not A Member | Sign Up</string>
    <string name="submit">Submit</string>
    <string name="fullNAme">Full Name</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="mobileNo">Mobile No.</string>
    <string name="address">Address</string>
    <string name="alternateContactName">Alternate Contact Name</string>
    <string name="alternateContactMobile">Alternate Contact Mobile</string>
    <string name="projectName">Project Name</string>
    <string name="location">Location</string>
    <string name="typeOfProject">Type Of Project</string>
    <string name="designStartDate">Design Start Date</string>
    <string name="executionStartDate">Execution Start Date</string>
    <string name="estimatedStartDate">Estimated Start Date</string>
    <string name="setBudget">Set Budget</string>
    <string name="occupation">Occupation</string>
    <string name="nativeAddress">Native Address</string>
    <string name="panNumber">PAN Number</string>
    <string name="photoId">Photo ID</string>
    <string name="referredBy">Referred By</string>
    <string name="uploadYourPhoto">Upload Your Photo</string>
    <string name="uploadYourLogo">Upload Your Logo</string>
    <string name="residentialAddress">Residential Address</string>
    <string name="companyAddress">Company Address</string>
    <string name="dateOfBarth">Date Of Birth</string>
    <string name="officeNo">Office No.</string>
    <string name="companyStrength">Company Strength</string>
    <string name="companyName">Company Name</string>
    <string name="designation">Designation</string>
    <string name="licenseMatter">This End User License Agreement (“License” or “License Agreement”) is a legal agreement between Superapp Software Solutions Pvt. Ltd. Having its registered address at MUMBAI (“SSSPL”) and you and applies to your use of this SSSPL ‘Superapp’ software and all related documentation that accompanies this application (“Software”). \n
        SSSPL’s licensors refers to any third parties licensing all or any portion of such Software to SSSPL.  This License is specifically intended for the benefit of SSSPL and any SSSPL licensors.</string>
    <string name="condition1">Grant of License.  So long as you are in compliance with this License Agreement, SSSPL grants a non-exclusive license to use the Software subject to the restrictions set forth below.  No rights to the use of any SSSPL, or its licensors’, names, logos or trademarks are conveyed by this License.  This License Agreement is not for the sale of Software or any other intellectual property. All right, title and interest, and all intellectual property rights in and to the Software is owned by SSSPL or its licensors.  Except as expressly stated herein, no other rights are granted to you by implication, estoppels, or otherwise, under any patent, copyright, trade secret, trademark, or other intellectual property right.</string>
    <string name="condition2">Restrictions on Use.  You may use the Software only on your personal electronic device (e.g. computer, mobile phone, tablet, etc.).  You may not further redistribute, sublicense, rent, loan or lease the Software to a third party. </string>
    <string name="condition3">Copyright.  The Software is owned by SSSPL, its licensors or its suppliers and protected by copyright laws and international treaties.  You may not copy the Software other than as expressly provided in this License.  You may not reverse engineer, decompile, disassemble or otherwise attempt to derive the source code for the Software, or use any part of the Software for any use other than that for which it was supplied by SSSPL, unless specifically authorized by SSSPL. You may not modify, adapt, alter, translate, or create derivative works from the Software.</string>
    <string name="condition4">Term.  This License is effective until terminated.  You may terminate this License at any time by deleting or otherwise destroying the Software together with all copies in any form.  This License will also automatically terminate if you fail to comply with any term or condition of this License.  You agree that SSSPL also may, at its sole discretion, temporarily or permanently terminate the License with prior notice to you and/or terminate the Services without prior notice to you.	Upon termination, for any reason, you agree to destroy the Software together with all copies in any form.  Provisions which, by their nature, should remain in effect beyond termination of this License Agreement shall survive.</string>
    <string name="condition5">Compliance with Laws and Terms.  You agree to comply with all applicable laws in connection with the use of the Software and Services.  The form and content of pictures, text or other material that you transmit or create products from is governed by applicable laws (such as, those prohibiting child abuse, child pornography, copyright infringement, or invasion of privacy).  If you use the Software to transmit material to SSSPL, its affiliates, or any third party for printing or product fulfillment or other purposes, you must comply with the relevant terms of service.  You may not use the Software to transmit to SSSPL, its affiliates, or any third parties any pictures, text or other material that is unlawful, whether a violation of civil rights (such as libel) or criminal law (such as obscenity), or that fosters hatred of any race, religion, ethnicity, age-group, gender or sexuality.  You agree that you will defend, indemnify and hold SSSPL harmless against any claim arising out of or related to your failure to comply with the terms of this Section.</string>
    <string name="condition6">Software Features.  The Software may contain features that enable SSSPL, via the internet, to notify you of available software upgrades, promotions, products and services in which you may be interested; to update product data files and instructional and marketing content in the Software; and to collect non-personally identifiable usage data.  The Software may also contain features that enable you to download store locator files, new product themes and product catalogs.  You agree that SSSPL may utilize these features to provide such notices and updates, permit such downloads and to collect such data, unless you have elected to deactivate the features in the Software.</string>
    <string name="condition7">Privacy.  The Software may request or collect certain limited information about you when you use the Software. Such information might consist of your name, if you provide it, your email address, the names and email addresses of people that are stored on devices that connect to the Software or that you send content and information to through the Software, if you provide them, your username and password for your email accounts and online service providers (including, but not limited to SSSPL, Facebook, Twitter, YouTube, and Flickr) (“Login Credentials”) and device identification as well as technical data and related information, including but not limited to technical information about your device, system and application software (collectively “Personal Information”). The Software may also collect information regarding what content you send through the Software and who you send it to (“Transmission Data”).  The Software may also use cookies or other passive tracking mechanisms and tools to collect information in order to facilitate your use of the Software. Any Login Credentials you provide to the Software will be encrypted.  Furthermore, SSSPL will collect aggregated non-personal data from all users of the Software relating to, for example, the number of images and videos transferred or shared, the Services to which they were transferred, and the number of individuals with whom images were shared (“Aggregate Data”).  SSSPL will only use the Aggregate Data to assess the overall use of the Software by customers in order to determine how the Software is being used and how it and other products can be improved. The Software may collect personally identifiable data which shall include Unique device identifier, Geo-location data, Mobile phone number, Email address, User’s name, Text messages/email/Call logs Contacts/address book (directly executed from the APP or stored on the SSSPL website. SSPL may require access to the device camera. All data generated by the Software shall be ethically used and may be monetized. Under no circumstances shall SSPL collect any external financial and payment information, health and medical information, web browsing history or details of Apps downloaded or used. Please keep in mind that the nature of the Software and services may be interactive, and as part of your use of the Software you will be provided the opportunity to share information and content with third parties. You should use caution when deciding what information and content to share through the Software.</string>
    <string name="email">Email</string>
    <string name="noDataFound">No Data Found</string>
    <string name="history">History</string>
    <string name="onGoingTask">On going task</string>
    <string name="enrollForSuperAppSearch">Enroll for superapp search</string>
    <string name="premium">Premium</string>
    <string name="premiumCondition1">a. No Ads</string>
    <string name="premiumCondition2">b. No Compulsory Surveys</string>
    <string name="premiumCondition3">c. 2 Logins at a time (Mobile+Web)</string>
    <string name="premiumCondition4">d. Unlimited projects</string>
    <string name="premiumCondition5">e. Backup and download (HTML)</string>
    <string name="premiumCondition6">f. Future updates included in the annual cost</string>
    <string name="paid">Paid</string>
    <string name="paidCondition1">a. No Ads</string>
    <string name="paidCondition2">b. No Compulsory Surveys</string>
    <string name="paidCondition3">c. Single login at a time</string>
    <string name="paidCondition4">d. Maximum 5 projects at a time</string>
    <string name="paidCondition5">e. No backup and download</string>
    <string name="paidCondition6">f. Future updates included in the monthly cost</string>
    <string name="free">Free</string>
    <string name="freeCondition1">a. Compulsory Ads</string>
    <string name="freeCondition2">b. Compulsory Surveys</string>
    <string name="freeCondition3">c. Single login at a time.</string>
    <string name="freeCondition4">d. Maximum 2 projects at a time.</string>
    <string name="freeCondition5">e. No backup and download</string>
    <string name="freeCondition6">f. No future updates</string>
    <string name="pay">Pay</string>
</resources>