<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <include layout="@layout/header_outer" />

        </LinearLayout>

        <LinearLayout
            style="@style/subLinearLayoutForTiles"
            android:background="@color/colorLightGrayLevel2"
            android:paddingTop="0.5dp">

            <LinearLayout
                style="@style/subLinearLayoutForTiles"
                android:background="@color/white">

                <EditText
                    android:id="@+id/et_name_register"
                    style="@style/tile1"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:maxLength="30"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_company_name_register"
                    style="@style/tile2"
                    android:hint="@string/company_name"
                    android:inputType="textCapWords"
                    android:maxLength="30"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_eMail_register"
                    style="@style/tile3"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:singleLine="true" />

                <LinearLayout
                    style="@style/tile4"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1.3"
                        android:gravity="center|right"
                        android:text="+91"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_mobile_no_register"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:background="#D9DBDA"
                        android:hint="@string/username"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="#808080"
                        android:textSize="16sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/et_password_register"
                    style="@style/tile4"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/et_re_password_register"
                    style="@style/tile5"
                    android:hint="@string/re_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:singleLine="true" />


                <LinearLayout
                    android:id="@+id/ll_checkBox_enrollForSuperAppSearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="0.5dp"
                    android:background="#C5C7C6"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="60dp"
                    android:paddingTop="10dp"
                    android:visibility="visible">


                    <CheckBox
                        android:id="@+id/checkbox_enrollForSuperAppSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_background"
                        android:paddingLeft="15dp"
                        android:text="@string/enrollForSuperAppSearch"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_register_register"
                    style="@style/tile6"
                    android:background="@color/colorDarkGreen"
                    android:text="@string/register" />

                <TextView style="@style/tile7" />

                <TextView
                    android:id="@+id/tv_tile8_register"
                    style="@style/tile8"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>