<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <include layout="@layout/header_outer" />

        </LinearLayout>

        <LinearLayout
            style="@style/subLinearLayoutForTiles"
            android:background="@color/colorLightGrayLevel2"
            android:paddingTop="0.5dp">

            <LinearLayout
                style="@style/subLinearLayoutForTiles"
                android:background="@color/white">

                <LinearLayout
                    style="@style/tile0"
                    android:background="#FFFFFF"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1.3"
                        android:gravity="center|right"
                        android:text="+91"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="2"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:hint="@string/username"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="#808080"
                        android:textSize="16sp" />

                </LinearLayout>


                <EditText
                    android:id="@+id/et_password"
                    style="@style/tile1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tv_logIn"
                    style="@style/tile2"
                    android:background="@color/colorDarkGreen"
                    android:text="@string/log_in" />

                <View style="@style/tile3" />

                <TextView
                    android:id="@+id/tv_registration"
                    style="@style/tile4"
                    android:text="@string/not_a_member_sign_in" />

                <TextView
                    android:id="@+id/tv_forgot_password"
                    style="@style/tile5"
                    android:text="@string/forgot_password" />

                <View style="@style/tile6" />

                <View style="@style/tile7" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>