<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.5dp"
        android:background="@color/colorLightGrayLevel4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_onGoingTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorLightGray"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/onGoingTask"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTextHintColor"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/history"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_noDataFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/noDataFound"
        android:visibility="gone" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_taskList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>